# LatinSquare

./: CMakeLists.txt  main.cpp
src/: fwd.hpp
src/latin/: AlgorithmHelper.cpp  AlgorithmHelper.hpp  LatingSquareAlgorithm.cpp  LatingSquareAlgorithm.hpp
src/sdk/: LifeStarter.cpp  LifeStarter.hpp
